@startuml
title Diagramme de Classes - Plateforme Fixer
skinparam classAttributeIconSize 0
skinparam dpi 300

class Utilisateur {
  - Long id
  - String username
  - String email
  - String password
  - String role
  - String profilePhoto
  - String phone
  - String address
  - Boolean emailVerified
  - Boolean isOnline
  - LocalDateTime createdAt
  - LocalDateTime updatedAt

  + String getUsername()
  + Collection getAuthorities()
  + Boolean isAccountNonExpired()
  + Boolean isAccountNonLocked()
  + Boolean isCredentialsNonExpired()
  + Boolean isEnabled()
}

class Publication {
  - Long id
  - String title
  - String description
  - String type
  - Double price
  - String status
  - Boolean verified
  - Boolean inCatalog
  - Boolean inPublications
  - String fileUrl
  - String fileType
  - LocalDateTime createdAt
  - LocalDateTime updatedAt

  + void verify()
  + void unverify()
}

class Comment {
  - Long id
  - String content
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
}

class Message {
  - Long id
  - String content
  - String fileUrl
  - Double latitude
  - Double longitude
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
}

class Notification {
  - Long id
  - String message
  - String type
  - Boolean isRead
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
}

class Cart {
  - Long id
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
}

class CartItem {
  - Long id
  - Integer quantity
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
}

class Recommendation {
  - Long id
  - Integer rating
  - LocalDateTime createdAt
}

' Relations
Utilisateur "1" --> "*" Publication : possède / publie
Utilisateur "1" --> "*" Comment : écrit

Utilisateur "1" --> "*" Message : envoie
Utilisateur "*" <-- "1" Message : reçoit

Utilisateur "1" --> "*" Notification : reçoit
Utilisateur "1" --> "1" Cart : possède

Publication "1" --> "*" Comment : a
Publication "1" --> "*" CartItem : est dans
Cart "1" --> "*" CartItem : contient

Utilisateur "1" --> "*" Recommendation : reçoit

Notification "*" --> "0..1" Publication : réfère à

@enduml
